# Qt-Frameless-Window-DarkStyle

./: .gitignore  CMakeLists.txt  DarkStyle.cpp  DarkStyle.h  README.md  darkstyle.qrc  frameless_window_dark.pro  framelesswindow.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: install-config.cmake  install-rules.cmake  link_qt.cmake  variables.cmake
darkstyle/: darkstyle.qss
example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
framelesswindow/: framelesswindow.cpp  framelesswindow.h  framelesswindow.ui  windowdragger.cpp  windowdragger.h
include/: DarkStyle.h  framelesswindow.h
source/: darkstyle.qrc  framelesswindow.cpp  framelesswindow.ui  windowdragger.cpp  windowdragger.h
source/darkstyle/: darkstyle.qss
